# app-plugininterface

./: CMakeLists.txt  CMakeSettings.json  README.md  VersionInfo.rc.in
apppluginterface/: IAppPluginInterface.h  PLUGIN_INFO_KEY.h  PluginMetaData.cpp  PluginMetaData.h
bdlbsc/plugin/supper/: IAppPluginInterface.h  PLUGIN_INFO_KEY.h  PluginMetaData.cpp  PluginMetaData.h
cmake/: Config.cmake.in
docs/: DLL 设置版权.md  Windows 配置.md  macOS配置.md  插件开发说明.doc
